--- a/Source/CriticalPath.Data/Resources/ActionStrings.resx
+++ b/Source/CriticalPath.Data/Resources/ActionStrings.resx
@@ -71,6 +71,10 @@
 		<value>Add New</value>
 	</data>
 
+	<data name="AddRemove" xml:space="preserve">
+		<value>Add/Remove</value>
+	</data>
+
 	<data name="Approve" xml:space="preserve">
 		<value>Approve</value>
 	</data>
