--- a/Source/CriticalPath.Data/Resources/ActionStrings.tr.resx
+++ b/Source/CriticalPath.Data/Resources/ActionStrings.tr.resx
@@ -87,6 +87,10 @@
 		<value>Vazgeç</value>
 	</data>
 
+	<data name="CancelPO" xml:space="preserve">
+		<value>Siparişi İptal Et</value>
+	</data>
+
 	<data name="Choose" xml:space="preserve">
 		<value>Seç</value>
 	</data>
