--- a/Source/CriticalPath.Data/Resources/EntityStrings.tr.Resx
+++ b/Source/CriticalPath.Data/Resources/EntityStrings.tr.Resx
@@ -547,6 +547,10 @@
 		<value>Resim Yolu</value>
 	</data>
 
+	<data name="InactivateDate" xml:space="preserve">
+		<value>Inactivate Date</value>
+	</data>
+
 	<data name="IsActive" xml:space="preserve">
 		<value>Aktif</value>
 	</data>
