Translated vocabs added

--- a/Source/CriticalPath.Data/Resources/EntityStrings.tr.Resx
+++ b/Source/CriticalPath.Data/Resources/EntityStrings.tr.Resx
@@ -548,7 +548,7 @@
 	</data>
 
 	<data name="InactivateDate" xml:space="preserve">
-		<value>Inactivate Date</value>
+		<value>İnaktif Tarihi</value>
 	</data>
 
 	<data name="IsActive" xml:space="preserve">
